[project]
name = "owasp-depscan"
version = "6.0.0"
description = "Fully open-source security audit for project dependencies based on known vulnerabilities and advisories."
authors = [
    {name = "Team AppThreat", email = "cloud@appthreat.com"},
]
dependencies = [
    "appthreat-vulnerability-db[oras]",
    "custom-json-diff>=2.1.6",
    "defusedxml>=0.7.1",
    "PyYAML>=6.0.2",
    "rich>=14.0.0",
    "Jinja2>=3.1.6",
    "packageurl-python>=0.16.0",
    "cvss>=3.4",
    "tomli>=2.2.1",
    "ds-xbom-lib",
    "ds-analysis-lib"
]

requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/owasp-dep-scan/dep-scan"
Bug-Tracker = "https://github.com/owasp-dep-scan/dep-scan/issues"
Funding = "https://owasp.org/donate/?reponame=www-project-dep-scan&title=OWASP+depscan"

[project.scripts]
depscan = "depscan.cli:main"
scan = "depscan.cli:main"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "httpretty>=1.1.4"
]
server = ["quart>=0.20.0"]
ext = ["atom-tools>=0.7.8", "blint>=2.4.1", "pdfkit>=1.0.0"]
perf = ["hishel[redis]>=0.1.1"]
all = ["atom-tools>=0.7.8", "blint>=2.4.1", "quart>=0.20.0", "pdfkit>=1.0.0", "PyGithub>=2.6.1", "hishel[redis]>=0.1.1"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["depscan", "depscan.lib", "depscan.lib.package_query", "vendor", "vendor.spdx.json"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q -s --verbose --cov-append --cov-report term --cov depscan --cov packages/analysis-lib --cov packages/xbom-lib"
testpaths = [
    "test",
    "packages/analysis-lib/tests"
]

[tool.flake8]
ignore = "E203, E266, E501, W503, W605"
max-line-length = 99
max-complexity = 18
select = "B,C,E,F,W,T4,B9"

[tool.black]
line-length = 99

[tool.uv.sources]
appthreat-vulnerability-db = { git = "https://github.com/appthreat/vulnerability-db", rev = "ba88de9194bde83b23d31c2b48a72c60d0ca1944" }
blint = { git = "https://github.com/owasp-dep-scan/blint", rev = "0a29b47a1d0ab55fcf4480785f0a8948104d7632" }
ds-xbom-lib = { workspace = true }
ds-analysis-lib = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
